Invisible loose edges on objects used in bone visualization #77496

Closed
opened 2020-06-06 11:30:46 +02:00 by Erick Tukuniata · 11 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 550 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 376.54

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-05 12:32, hash: a6cd77bad1
Worked: 02.06.2020 build hash: cecda64e2e

Short description of error
In the latest versions, one of the bones in the attached file has disappeared.
This is because the object used to view it has become invisible.

File where the bug was identified:
girl_bug.blend

Exact steps for others to reproduce the error
Open the bone_w_loose_edge_obj_bug.blend file in the latest master notice that FK_forearm.L is missing in pose mode and object mode.
Open the same file in the 02.06.2020 build and the bone should be there.

Simplified file revealing the bug:
bone_w_loose_edge_obj_bug.blend

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 550 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 376.54 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-05 12:32, hash: `a6cd77bad1` Worked: 02.06.2020 build hash: cecda64e2ead **Short description of error** In the latest versions, one of the bones in the attached file has disappeared. This is because the object used to view it has become invisible. File where the bug was identified: [girl_bug.blend](https://archive.blender.org/developer/F8586307/girl_bug.blend) **Exact steps for others to reproduce the error** Open the `bone_w_loose_edge_obj_bug.blend` file in the latest master notice that FK_forearm.L is missing in pose mode and object mode. Open the same file in the 02.06.2020 build and the bone should be there. Simplified file revealing the bug: [bone_w_loose_edge_obj_bug.blend](https://archive.blender.org/developer/F8602355/bone_w_loose_edge_obj_bug.blend)

Added subscriber: @ErickNyanduKabongo

Added subscriber: @ErickNyanduKabongo

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

The bone is invisible because the object related to it is invisible. And it looks like a bug.
I will update the description.

The bone is invisible because the object related to it is invisible. And it looks like a bug. I will update the description.
Germano Cavalcante changed title from Bone had disappeared in pose mode and object mode to Lose edges of objects used for bone visualization are sometimes invisible 2020-06-08 19:34:49 +02:00

@mano-wii Thanks for simplifying the file. Now with your posted file i can crash Blender if i click the TAB-key, about less then 4 times. It seems like you have exposed more problems

@mano-wii Thanks for simplifying the file. Now with your posted file i can crash Blender if i click the TAB-key, about less then 4 times. It seems like you have exposed more problems
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Member

Issue introduced by {bf34b0c8f4b8c64bcc4ec0f3371d343e9c2fe029}

Issue introduced by {bf34b0c8f4b8c64bcc4ec0f3371d343e9c2fe029}
Jeroen Bakker self-assigned this 2020-06-09 09:56:22 +02:00
Member
[D7962: Fix #77342: Fail to draw loose edges](https://archive.blender.org/developer/D7962) seems to fix it partly.
Germano Cavalcante changed title from Lose edges of objects used for bone visualization are sometimes invisible to Invisible loose edges on objects used in bone visualization 2020-06-09 14:06:53 +02:00
Member

I have a possible area to look at. Overlay_armature calls drw_batch_cache_generate_requested directly. this creates a second instance of batch extraction tasks and it won't be completed as it used to be.

/* TODO(fclem) needs to be moved elsewhere. */
  drw_batch_cache_generate_requested(custom);

might get in our way and we should move it somewhere else. Removing these fixes the issue for small files. larger files crash as the batches aren't up to date.

diff --git a/source/blender/draw/engines/overlay/overlay_armature.c b/source/blender/draw/engines/overlay/overlay_armature.c
index 95fd918f8c1..9e52d8ece4e 100644
--- a/source/blender/draw/engines/overlay/overlay_armature.c
+++ b/source/blender/draw/engines/overlay/overlay_armature.c
@@ -567,7 +567,7 @@ static void drw_shgroup_bone_custom_solid(ArmatureDrawContext *ctx,
   }
 
   /* TODO(fclem) needs to be moved elsewhere. */
-  drw_batch_cache_generate_requested(custom);
+  // drw_batch_cache_generate_requested(custom);
 }
 
 static void drw_shgroup_bone_custom_wire(ArmatureDrawContext *ctx,
@@ -591,7 +591,7 @@ static void drw_shgroup_bone_custom_wire(ArmatureDrawContext *ctx,
   }
 
   /* TODO(fclem) needs to be moved elsewhere. */
-  drw_batch_cache_generate_requested(custom);
+  // drw_batch_cache_generate_requested(custom);
 }
 
 static void drw_shgroup_bone_custom_empty(ArmatureDrawContext *ctx,
I have a possible area to look at. Overlay_armature calls drw_batch_cache_generate_requested directly. this creates a second instance of batch extraction tasks and it won't be completed as it used to be. ``` /* TODO(fclem) needs to be moved elsewhere. */ drw_batch_cache_generate_requested(custom); ``` might get in our way and we should move it somewhere else. Removing these fixes the issue for small files. larger files crash as the batches aren't up to date. ``` diff --git a/source/blender/draw/engines/overlay/overlay_armature.c b/source/blender/draw/engines/overlay/overlay_armature.c index 95fd918f8c1..9e52d8ece4e 100644 --- a/source/blender/draw/engines/overlay/overlay_armature.c +++ b/source/blender/draw/engines/overlay/overlay_armature.c @@ -567,7 +567,7 @@ static void drw_shgroup_bone_custom_solid(ArmatureDrawContext *ctx, } /* TODO(fclem) needs to be moved elsewhere. */ - drw_batch_cache_generate_requested(custom); + // drw_batch_cache_generate_requested(custom); } static void drw_shgroup_bone_custom_wire(ArmatureDrawContext *ctx, @@ -591,7 +591,7 @@ static void drw_shgroup_bone_custom_wire(ArmatureDrawContext *ctx, } /* TODO(fclem) needs to be moved elsewhere. */ - drw_batch_cache_generate_requested(custom); + // drw_batch_cache_generate_requested(custom); } static void drw_shgroup_bone_custom_empty(ArmatureDrawContext *ctx, ```

This issue was referenced by 624994caa2

This issue was referenced by 624994caa2544823a1c89a868e9bf6760f525269
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#77496
No description provided.